# project-castaway

./: .gitignore  Cargo.toml  LICENSE  README  README.md  build.rs
.github/workflows/: rust.yml
examples/: hello_world.rs
examples/hello_world/: main.rs
scripts/gh-actions/: tarpaulin_reinstall_check.js
src/: lib.rs
src/app/: camera.rs
src/vulkan/: buffer.rs  context.rs  descriptor.rs  instance.rs  mod.rs  physical_device.rs  query.rs  sync.rs
src/vulkan/ray_tracing/: acceleration_structure.rs  shader_binding_table.rs
tests/: tests.rs
tests/vulkan/: version.rs
workspace/macros/macro-args-macro/: Cargo.toml
workspace/macros/macro-args-macro/src/: lib.rs
workspace/macros/parseable/: Cargo.toml  test_result.txt
workspace/macros/parseable/src/: lib.rs
workspace/macros/shader-gen/: Cargo.toml
workspace/macros/shader-gen/src/: lib.rs
workspace/macros/shader-macro/: Cargo.toml
workspace/project-adrift/: Cargo.toml  README.md
workspace/project-beacon/: Cargo.toml  README.md
workspace/project-beacon/examples/hello_world/: main.rs
workspace/project-beacon/macro-args-macro/: Cargo.toml
workspace/project-beacon/macro-args-macro/src/: lib.rs
workspace/project-beacon/macro-args-macro/tests/: test.rs
workspace/project-beacon/proc-mac/: Cargo.toml
workspace/project-beacon/proc-mac/src/: lib.rs
workspace/project-beacon/shader-macro/src/: lib.rs
workspace/project-beacon/src/: lib.rs
workspace/project-beacon/src/app/: camera.rs  mod.rs
workspace/project-beacon/src/vulkan/: command.rs  device.rs  image.rs  queue.rs  sampler.rs  surface.rs  swapchain.rs  utils.rs
workspace/project-beacon/src/vulkan/pipeline/: compute.rs  graphics.rs  layout.rs  shader.rs
workspace/project-beacon/src/vulkan/ray_tracing/: mod.rs  pipeline.rs  shader_binding_table.rs
workspace/project-beacon/tests/: tests.rs
workspace/project-beacon/tests/vulkan/: version.rs
workspace/project-compass/: Cargo.toml  README.md
workspace/project-harbor/: Cargo.toml  README.md
workspace/project-rudder/: Cargo.toml  README.md
workspace/project-siren/: Cargo.toml  README.md
