[package]
name = "project-castaway"
version = "0.1.0"
authors = ["Steven Fontaine"]
edition = "2021"
description = "A Vulkan-based rendering engine built on Rust with a focus on native raytracing"
readme = "./README"
repository = "https://github.com/ABitOff/project-castaway"
license = "MIT"
keywords = [
    "project-castaway",
    "castaway",
    "vulkan",
    "ray",
    "tracing",
    "render",
    "3D",
    "engine",
    "game"
]
categories = ["game-development", "game-engines", "graphics", "rendering"]

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 8

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
glam = "0.24.2"
gpu-allocator = { version = "0.24.0", default-features = false, features = ["vulkan"] }
raw-window-handle = "0.5"
winit = "0.27"
