[package]
resolver = "2"
name = "project-beacon"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A Vulkan-based rendering engine built on Rust with a focus on native raytracing"
repository.workspace = true
license.workspace = true
keywords = [
    "project-castaway",
    "castaway",
    "project-beacon",
    "beacon",
    "vulkan",
    "ray",
    "tracing",
    "render",
    "3D",
    "engine",
]
categories = ["graphics", "rendering"]

[dependencies]
anyhow.workspace = true
ash.workspace = true
ash-window.workspace = true
glam.workspace = true
gpu-allocator.workspace = true
raw-window-handle.workspace = true
winit.workspace = true
shader-gen = { path = "../macros/shader-gen" }
