[lib]
proc-macro = true

[package]
name = "parseable"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full"] }

[dev-dependencies]
proc-macro-utils = "0.8.0"
