[lib]
proc-macro = true

[package]
name = "shader-gen"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
ash.workspace = true
proc-macro2 = "1.0.69"
quote = "1.0.33"
# shaderc.workspace = true
# spirvcross = { version = "0.1.1", features = ["glsl", "hlsl", "msl"] }
syn = { version = "2.0.39", features = ["full"] }
parseable = { path = "../parseable" }
